--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div id="app" class="container">
+  <div id="app">
     <main>
       <div class="main-container">
         <div class="back">
@@ -110,6 +110,31 @@
             <div class="input-wrapper">
               <label for="state">Número</label>
               <input type="text" id="state" name="state" value="SP" disabled>
+            </div>
+          </div>
+
+        </fieldset>
+
+        <fieldset class="gardian">
+          <legend>Informações	do responsável</legend>
+
+          <div class="input-wrapper">
+            <label for="gardian">Nome do responsável</label>
+            <input type="text" id="gardian" name="gardian">
+            <small>Principal responsável legal e contato de emergência</small>
+          </div>
+
+          <div class="input-wrapper">
+            <label for="phone">Telefone</label>
+            <input type="text" id="phone" name="phone" placeholder="(10) 9 8765-4321">
+          </div>
+
+          <div class="input-wrapper">
+            <label for="mail">E-mail</label>
+            <input type="email" id="mail" name="mail" required>
+            <div class="error">
+              <img src="assets/icons/alert-circle.svg" alt="ícone de alerta vermelho">
+              <span>Insira um e-mail válido</span>
             </div>
           </div>
 
