--- a/index.html
+++ b/index.html
@@ -139,6 +139,33 @@
           </div>
 
         </fieldset>
+
+        <fieldset class="enrool-optons">
+          <legend>Opções de matrícula</legend>
+
+          <div class="input-wrapper">
+            <label>Selecione o turno de estudo</label>
+
+            <div class="radio-wrapper">
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" id="morning" name="morning">
+                <img src="assets/icons/sun-cloud-02.svg" alt="icone de sol com nuvem">
+                <label for="morning">Manhã</label>
+              </div>
+  
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" id="afternoon" name="afternoon">
+                <img src="assets/icons/sun-02.svg" alt="icone de sol">
+                <label for="afternoon">Tarde</label>
+              </div>
+            </div>
+            </div>
+
+        </fieldset>
+
+
       </form>
     </main>
 
