Fixing the Main layout and name of the radio input

--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
             <div class="radio-wrapper">
               <div class="radio-inner">
                 <div class="radio-image"></div>
-                <input type="radio" id="morning" name="morning">
+                <input type="radio" id="morning" name="study-shift" value="morning">
                 <img src="assets/icons/sun-cloud-02.svg" alt="icone de sol com nuvem">
                 <label for="morning">Manhã</label>
               </div>
   
               <div class="radio-inner">
                 <div class="radio-image"></div>
-                <input type="radio" id="afternoon" name="afternoon">
+                <input type="radio" id="afternoon" name="study-shift" value="afternoon">
                 <img src="assets/icons/sun-02.svg" alt="icone de sol">
                 <label for="afternoon">Tarde</label>
               </div>
