Creating the Enrool Options field (structure and style)

--- a/index.html
+++ b/index.html
@@ -161,9 +161,58 @@
                 <label for="afternoon">Tarde</label>
               </div>
             </div>
+          </div>
+
+          <div class="input-wrapper">
+            <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+
+            <div class="radio-wrapper">
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" id="football" name="sports" value="football">
+                <img src="assets/icons/football.svg" alt="bola de futebol">
+                <label for="football">Futebol</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" id="basketball" name="sports" value="basketball">
+                <img src="assets/icons/basketball-02.svg" alt="bola de basquete">
+                <label for="basketball">Basquete</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" id="swimming" name="sports" value="swimming">
+                <img src="assets/icons/swimming.svg" alt="icone de pessoa nadando">
+                <label for="swimming">Natação</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" id="yoga" name="sports" value="yoga">
+                <img src="assets/icons/yoga-02.svg" alt="icone de pessoa fazendo yoga">
+                <label for="yoga">Yoga</label>
+              </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" id="volleyball" name="sports" value="volleyball">
+                  <img src="assets/icons/volleyball.svg" alt="bola de volley">
+                  <label for="volleyball">Volley</label>
+                </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" id="boxing" name="sports" value="boxing">
+                    <img src="assets/icons/boxing-glove-01.svg" alt="luva de boxe">
+                    <label for="boxing">Box</label>
+                  </div>
             </div>
+          </div>
 
         </fieldset>
+
 
 
       </form>
