--- a/index.html
+++ b/index.html
@@ -213,7 +213,11 @@
 
         </fieldset>
 
-
+        <div class="input-wrapper terms-wrapper checkbox-wrapper">
+          <div class="checkbox-image"></div>
+          <input type="checkbox" id="terms" name="terms">
+          <label for="terms">Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. </label>
+        </div>
 
       </form>
     </main>
