Adding adding rows in textarea

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <div class="textarea-wrapper">
             <label for="medical-info">Informações médicas</label>
-            <textarea name="medical-info" id="medical-info"
+            <textarea name="medical-info" id="medical-info" rows="5"
               placeholder="A criança possui alguma infomração médica que a escola precisa estar ciente? Se sim, especifique."></textarea>
           </div>
 
